[package]
authors = ["Edd Barrett"]
name = "rustc_yk"
version = "0.0.0"

[lib]
name = "rustc_yk"
path = "lib.rs"
crate-type = ["dylib"]
test = false

[dependencies]
rustc = {path = "../librustc"}
data_section = {path = "../../../data_section_pv"}
rustc_metadata = {path = "../librustc_metadata"}
rustc_data_structures = {path = "../librustc_data_structures"}
