[package]
authors = ["Edd Barrett"]
name = "rustc_yk"
version = "0.0.0"

[lib]
name = "rustc_yk"
path = "lib.rs"
crate-type = ["dylib"]
test = false

[dependencies]
rustc = {path = "../librustc"}
rustc_metadata = {path = "../librustc_metadata"}
rustc_data_structures = {path = "../librustc_data_structures"}
rustc_yk_datasection = {path = "../librustc_yk_datasection"}
